--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chen Mingliang",
-  "license": ""
+  "license": "",
+  "types": "index.d.ts"
 }
