--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-native-nodemediaclient",
-  "version": "0.2.18",
+  "name": "injex/react-native-nodemediaclient",
+  "version": "0.2.5",
   "description": "This project is the react-native packaging of NodeMediaClient-Android and NodeMediaClient-iOS SDK.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Chen Mingliang",
+  "author": "Pavel Egerev",
   "license": ""
 }
