--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "injex/react-native-nodemediaclient",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "This project is the react-native packaging of NodeMediaClient-Android and NodeMediaClient-iOS SDK.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": {
+  "authors": [{
             "name": "Injex",
             "email": "info@injex.ru"
-        }
-  "license": ""
+        }]
+  "license": "MIT",
 }
