--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cn.nodemedia.react_native_nodemediaclient"/>
+          package="br.app.alive.rtmp_stream"/>
